--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,14 +1,28 @@
 <resources>
     <string name="app_name">AppPencarianFilm</string>
-    <string name="movie_title_hint">Movie Title</string>
 
-    <!-- Dummy String -->
-    <string name="dummy_description">Lorem Ipsum adalah contoh teks atau dummy dalam industri percetakan dan penataan huruf atau typesetting.</string>
-    <string name="title_placeholder">Title</string>
+    <!-- Title -->
+    <string name="movie_title_hint">Movie Title</string>
+    <string name="title_bar_search_movie">Search Movie</string>
+    <string name="search">Search</string>
+    <string name="overview">Overview</string>
+    <string name="release">Release</string>
+    <string name="genres">Genres</string>
     <string name="rating">Rating</string>
     <string name="language">language</string>
     <string name="duration">duration</string>
 
-    <string name="no_data_text">Tidak ada data</string>
+    <!--placeholder-->
+    <string name="language_placeholder">en</string>
+    <string name="title_placeholder">Title</string>
+    <string name="description_placeholder">Lorem Ipsum adalah contoh teks atau dummy dalam industri percetakan dan penataan huruf atau typesetting.</string>
+
+    <!-- Warning Message-->
+    <string name="warning_message_movie_empty_search">Masukan Movie yang anda cari!</string>
     <string name="error_problem_text">Terjadi kesalahan server</string>
+    <string name="no_data_text">Movie tidak ditemukan</string>
+    <string name="message_warning_all_movie_loaded">All Movie Loaded</string>
+    <string name="no_genres">no genres</string>
+    <string name="text_no_overview">No overview</string>
+
 </resources>
