--- a/app/src/main/res/values-in/strings.xml
+++ b/app/src/main/res/values-in/strings.xml
@@ -1,13 +1,15 @@
+<?xml version="1.0" encoding="utf-8"?>
 <resources>
+
     <string name="app_name">AppPencarianFilm</string>
 
     <!-- Title -->
     <string name="movie_title_hint">Movie Title</string>
-    <string name="title_bar_search_movie">Search Movie</string>
-    <string name="title_bar_now_playing">Now Playing</string>
-    <string name="title_bar_up_comming">Up Comming</string>
-    <string name="title_bar_setting_laguage">Change Language</string>
-    <string name="search">Search</string>
+    <string name="title_bar_search_movie">Cari Film</string>
+    <string name="title_bar_now_playing">Sedang Tayang</string>
+    <string name="title_bar_up_comming">Akan Datang</string>
+    <string name="title_bar_setting_laguage">Pilih Bahasa</string>
+    <string name="search">Cari</string>
     <string name="overview">Overview</string>
     <string name="release">Release</string>
     <string name="genres">Genres</string>
@@ -16,16 +18,16 @@
     <string name="duration">duration</string>
 
     <!--placeholder-->
-    <string name="language_placeholder">en</string>
-    <string name="title_placeholder">Title</string>
+    <string name="language_placeholder">id</string>
+    <string name="title_placeholder">Judul</string>
     <string name="description_placeholder">Lorem Ipsum adalah contoh teks atau dummy dalam industri percetakan dan penataan huruf atau typesetting.</string>
 
     <!-- Warning Message-->
     <string name="warning_message_movie_empty_search">Masukan Movie yang anda cari!</string>
     <string name="error_problem_text">Terjadi kesalahan server</string>
     <string name="no_data_text">Movie tidak ditemukan</string>
-    <string name="message_warning_all_movie_loaded">All Movie Loaded</string>
-    <string name="no_genres">No genres</string>
-    <string name="text_no_overview">No overview</string>
+    <string name="message_warning_all_movie_loaded">Semua Film Dimuat</string>
+    <string name="no_genres">tidak ada kategori</string>
+    <string name="text_no_overview">Tidak ada ulasan</string>
 
 </resources>
