--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
     <string name="app_name">AppPencarianFilm</string>
 
     <!-- Title -->
@@ -19,7 +19,7 @@
 
     <!-- Warning Message-->
     <string name="warning_message_movie_empty_search">Masukan Movie yang anda cari!</string>
-    <string name="error_problem_text">Terjadi kesalahan server</string>
+    <string name="error_problem_text" tools:keep="@string/error_problem_text">Terjadi kesalahan server</string>
     <string name="no_data_text">Movie tidak ditemukan</string>
     <string name="message_warning_all_movie_loaded">All Movie Loaded</string>
     <string name="no_genres">No genres</string>
