--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
     <string name="app_name">AppPencarianFilm</string>
 
     <!-- Title -->
     <string name="movie_title_hint">Movie Title</string>
     <string name="title_bar_search_movie">Search Movie</string>
     <string name="title_bar_now_playing">Now Playing</string>
-    <string name="title_bar_up_comming">Up Comming</string>
+    <string name="title_bar_up_comming">Up Coming</string>
     <string name="title_bar_setting_laguage">Change Language</string>
     <string name="search">Search</string>
     <string name="overview">Overview</string>
@@ -23,7 +23,7 @@
 
     <!-- Warning Message-->
     <string name="warning_message_movie_empty_search">Enter the Movie you are looking for!</string>
-    <string name="error_problem_text">A server error has occurred</string>
+    <string name="error_problem_text" tools:keep="@string/error_problem_text">A server error has occurred</string>
     <string name="no_data_text">Movie not found</string>
     <string name="message_warning_all_movie_loaded">All Movie Loaded</string>
     <string name="no_genres">No genres</string>
