--- a/app/src/main/res/values-in/strings.xml
+++ b/app/src/main/res/values-in/strings.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
 
     <string name="app_name">AppPencarianFilm</string>
 
@@ -24,7 +24,7 @@
 
     <!-- Warning Message-->
     <string name="warning_message_movie_empty_search">Masukan Movie yang anda cari!</string>
-    <string name="error_problem_text">Terjadi kesalahan server</string>
+    <string name="error_problem_text" tools:keep="@string/error_problem_text">Terjadi kesalahan server</string>
     <string name="no_data_text">Movie tidak ditemukan</string>
     <string name="message_warning_all_movie_loaded">Semua Film Dimuat</string>
     <string name="no_genres">tidak ada kategori</string>
