--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,11 +1,11 @@
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
     <string name="app_name">AppPencarianFilm</string>
 
     <!-- Title -->
     <string name="movie_title_hint">Movie Title</string>
     <string name="title_bar_search_movie">Search Movie</string>
     <string name="title_bar_now_playing">Now Playing</string>
-    <string name="title_bar_up_comming">Up Comming</string>
+    <string name="title_bar_up_comming">Up Coming</string>
     <string name="title_bar_setting_laguage">Change Language</string>
     <string name="search">Search</string>
     <string name="overview">Overview</string>
@@ -22,7 +22,7 @@
 
     <!-- Warning Message-->
     <string name="warning_message_movie_empty_search">Masukan Movie yang anda cari!</string>
-    <string name="error_problem_text">Terjadi kesalahan server</string>
+    <string name="error_problem_text" tools:keep="@string/error_problem_text">Terjadi kesalahan server</string>
     <string name="no_data_text">Movie tidak ditemukan</string>
     <string name="message_warning_all_movie_loaded">All Movie Loaded</string>
     <string name="no_genres">No genres</string>
